BRoster::Launch() didn't send a B_SILENT_RELAUNCH message to an already running app. Fixes bug #1162.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@20743 a95241bf-73f2-0310-859d-f6bbb57e9c96